<resources>
    <string name="app_name">文字锁屏K</string>

    <!--Main nav -->
    <string name="nav_home">首页</string>
    <string name="nav_landscape">横屏</string>
    <string name="nav_find">发现</string>
    <string name="nav_game">游戏</string>
    <string name="nav_my">我的</string>

    <!-- Home tab -->
    <string-array name="tab_home">
        <item>推荐</item>
        <item>分类</item>
    </string-array>

    <!-- landscape tab -->
    <string-array name="tab_landscape">
        <item>热门</item>
        <item>分类</item>
        <item>最新</item>
    </string-array>

    <string-array name="tab_me">
        <item>横屏壁纸</item>
        <item>竖屏壁纸</item>
    </string-array>

    <!--搜索界面-->
    <string name="search_hint">请输入关键字</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_change">换一批</string>
    <string name="search_record">搜索历史</string>
    <string name="search_delete">清空</string>
    <string name="search_null">搜索条件不能为空</string>

    <string name="wallpaper_wall_set">设为壁纸</string>
    <string name="wallpaper_lock_set">设为锁屏</string>
    <string name="wallpaper_set_success">壁纸设置成功</string>
    <string name="wallpaper_set_failed">壁纸设置失败</string>
    <string name="lock_screen_set_success">锁屏设置成功</string>
    <string name="wallpaper_set_ing">正在设置壁纸</string>

    <string name="alert_title">提示</string>
    <string name="alert_message">确定从手机删除?</string>
    <string name="alert_positive">确定</string>
    <string name="alert_negative">取消</string>
    <string name="alert_delete_success">删除成功</string>
    <string name="alert_delete_failed">删除失败</string>

    <string name="download_success">下载成功</string>
    <string name="download_extends">已下载</string>


    <string name="load_error">数据加载失败</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pic">PicActivity</string>
</resources>
